core/src/main/generated/java/antlr/com/jetbrains/youtrackdb/internal/core/gql/parser/gen/GQLParser.java
// Generated from GQL.g4 by ANTLR 4.13.2
package com.jetbrains.youtrackdb.internal.core.gql.parser.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class GQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, MATCH=13, CALL=14, FILTER=15, FOR=16, LET=17, 
		LIMIT=18, NEXT=19, RETURN=20, SKIP_TOKEN=21, WITH=22, OFFSET=23, ORDER=24, 
		BY=25, GROUP=26, OPTIONAL=27, AS=28, WHERE=29, OR=30, AND=31, NOT=32, 
		IN=33, NULL_TOKEN=34, ALL=35, ANY=36, SHORTEST=37, CHEAPEST=38, WALK=39, 
		ACYCLIC=40, TRAIL=41, PATH=42, PATHS=43, COST=44, IS=45, COLLATE=46, ASC=47, 
		ASCENDING=48, DESC=49, DESCENDING=50, DISTINCT=51, CASE=52, ELSE=53, WHEN=54, 
		THEN=55, END=56, COUNT=57, SUM=58, AVG=59, MIN=60, MAX=61, COLLECT=62, 
		EXISTS=63, UNION=64, INTERSECT=65, EXCEPT=66, DATE=67, TIME=68, TIMESTAMP=69, 
		DURATION=70, NODES=71, EDGES=72, LENGTH=73, LABELS=74, ARROW_RIGHT=75, 
		ARROW_LEFT=76, NEQ=77, GTE=78, LTE=79, GT=80, LT=81, EQ=82, ADD=83, MUL=84, 
		DIV=85, MOD=86, BOOL=87, DOT=88, DASH=89, RID=90, ID=91, INT=92, NUMBER=93, 
		STRING=94, WS=95;
	public static final int
		RULE_graph_query = 0, RULE_multi_linear_query_statement = 1, RULE_composite_linear_query_statement = 2, 
		RULE_simple_linear_query_statement = 3, RULE_primitive_query_statement = 4, 
		RULE_call_statement = 5, RULE_call_parameters = 6, RULE_filter_statement = 7, 
		RULE_for_statement = 8, RULE_list = 9, RULE_as_statement = 10, RULE_let_statement = 11, 
		RULE_linear_graph_variable = 12, RULE_limit_statement = 13, RULE_match_statement = 14, 
		RULE_match_hint = 15, RULE_hint_key = 16, RULE_hint_value = 17, RULE_offset_statement = 18, 
		RULE_skip_statement = 19, RULE_order_by_statement = 20, RULE_order_by_specification = 21, 
		RULE_collation_specification = 22, RULE_return_statement = 23, RULE_return_items = 24, 
		RULE_return_item = 25, RULE_group_by_clause = 26, RULE_groupable_item = 27, 
		RULE_with_statement = 28, RULE_graph_pattern = 29, RULE_path_pattern_list = 30, 
		RULE_top_level_path_pattern = 31, RULE_path_pattern = 32, RULE_quantifier = 33, 
		RULE_path_search_prefix = 34, RULE_path_mode = 35, RULE_node_pattern = 36, 
		RULE_edge_pattern = 37, RULE_full_edge_any = 38, RULE_full_edge_left = 39, 
		RULE_full_edge_right = 40, RULE_abbreviated_edge_any = 41, RULE_abbreviated_edge_left = 42, 
		RULE_abbreviated_edge_right = 43, RULE_pattern_filler = 44, RULE_is_label_condition = 45, 
		RULE_label_expression = 46, RULE_label_term = 47, RULE_label_factor = 48, 
		RULE_label_primary = 49, RULE_graph_pattern_variable = 50, RULE_cost_expression = 51, 
		RULE_where_clause = 52, RULE_property_filters = 53, RULE_property_list = 54, 
		RULE_property_assignment = 55, RULE_path_variable = 56, RULE_boolean_expression = 57, 
		RULE_boolean_expression_and = 58, RULE_boolean_expression_inner = 59, 
		RULE_comparison_expression = 60, RULE_value_expression = 61, RULE_list_literal = 62, 
		RULE_map_literal = 63, RULE_map_entry = 64, RULE_temporal_literal = 65, 
		RULE_path_function = 66, RULE_case_expression = 67, RULE_aggregate_function = 68, 
		RULE_exists_predicate = 69, RULE_math_expression = 70, RULE_math_expression_mul = 71, 
		RULE_math_expression_inner = 72, RULE_comparison_operator = 73, RULE_sub = 74, 
		RULE_numeric_literal = 75, RULE_property_reference = 76;
	private static String[] makeRuleNames() {
		return new String[] {
			"graph_query", "multi_linear_query_statement", "composite_linear_query_statement", 
			"simple_linear_query_statement", "primitive_query_statement", "call_statement", 
			"call_parameters", "filter_statement", "for_statement", "list", "as_statement", 
			"let_statement", "linear_graph_variable", "limit_statement", "match_statement", 
			"match_hint", "hint_key", "hint_value", "offset_statement", "skip_statement", 
			"order_by_statement", "order_by_specification", "collation_specification", 
			"return_statement", "return_items", "return_item", "group_by_clause", 
			"groupable_item", "with_statement", "graph_pattern", "path_pattern_list", 
			"top_level_path_pattern", "path_pattern", "quantifier", "path_search_prefix", 
			"path_mode", "node_pattern", "edge_pattern", "full_edge_any", "full_edge_left", 
			"full_edge_right", "abbreviated_edge_any", "abbreviated_edge_left", "abbreviated_edge_right", 
			"pattern_filler", "is_label_condition", "label_expression", "label_term", 
			"label_factor", "label_primary", "graph_pattern_variable", "cost_expression", 
			"where_clause", "property_filters", "property_list", "property_assignment", 
			"path_variable", "boolean_expression", "boolean_expression_and", "boolean_expression_inner", 
			"comparison_expression", "value_expression", "list_literal", "map_literal", 
			"map_entry", "temporal_literal", "path_function", "case_expression", 
			"aggregate_function", "exists_predicate", "math_expression", "math_expression_mul", 
			"math_expression_inner", "comparison_operator", "sub", "numeric_literal", 
			"property_reference"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'{'", "'}'", "','", "'@{'", "'['", "']'", "':'", 
			"'|'", "'&'", "'!'", null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "'->'", "'<-'", "'!='", "'>='", "'<='", 
			"'>'", "'<'", "'='", "'+'", "'*'", "'/'", "'%'", null, "'.'", "'-'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "MATCH", "CALL", "FILTER", "FOR", "LET", "LIMIT", "NEXT", "RETURN", 
			"SKIP_TOKEN", "WITH", "OFFSET", "ORDER", "BY", "GROUP", "OPTIONAL", "AS", 
			"WHERE", "OR", "AND", "NOT", "IN", "NULL_TOKEN", "ALL", "ANY", "SHORTEST", 
			"CHEAPEST", "WALK", "ACYCLIC", "TRAIL", "PATH", "PATHS", "COST", "IS", 
			"COLLATE", "ASC", "ASCENDING", "DESC", "DESCENDING", "DISTINCT", "CASE", 
			"ELSE", "WHEN", "THEN", "END", "COUNT", "SUM", "AVG", "MIN", "MAX", "COLLECT", 
			"EXISTS", "UNION", "INTERSECT", "EXCEPT", "DATE", "TIME", "TIMESTAMP", 
			"DURATION", "NODES", "EDGES", "LENGTH", "LABELS", "ARROW_RIGHT", "ARROW_LEFT", 
			"NEQ", "GTE", "LTE", "GT", "LT", "EQ", "ADD", "MUL", "DIV", "MOD", "BOOL", 
			"DOT", "DASH", "RID", "ID", "INT", "NUMBER", "STRING", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Graph_queryContext extends ParserRuleContext {
		public Multi_linear_query_statementContext multi_linear_query_statement() {
			return getRuleContext(Multi_linear_query_statementContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GQLParser.EOF, 0); }
		public Graph_queryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_graph_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GQLListener ) ((GQLListener)listener).enterGraph_query(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GQLListener ) ((GQLListener)listener).exitGraph_query(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GQLVisitor ) return ((GQLVisitor<? extends T>)visitor).visitGraph_query(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Graph_queryContext graph_query() throws RecognitionException {
		Graph_queryContext _localctx = new Graph_queryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_graph_query);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			multi_linear_query_statement();
			setState(155);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Multi_linear_query_statementContext extends ParserRuleContext {
		public List<Composite_linear_query_statementContext> composite_linear_query_statement() {
			return getRuleContexts(Composite_linear_query_statementContext.class);
		}
		public Composite_linear_query_statementContext composite_linear_query_statement(int i) {
			return getRuleContext(Composite_linear_query_statementContext.class,i);
		}
		public List<TerminalNode> NEXT() { return getTokens(GQLParser.NEXT); }
		public TerminalNode NEXT(int i) {
			return getToken(GQLParser.NEXT, i);
		}
		public Multi_linear_query_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multi_linear_query_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GQLListener ) ((GQLListener)listener).enterMulti_linear_query_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GQLListener ) ((GQLListener)listener).exitMulti_linear_query_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GQLVisitor ) return ((GQLVisitor<? extends T>)visitor).visitMulti_linear_query_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Multi_linear_query_statementContext multi_linear_query_statement() throws RecognitionException {
		Multi_linear_query_statementContext _localctx = new Multi_linear_query_statementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_multi_linear_query_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			composite_linear_query_statement();
			setState(162);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEXT) {
				{
				{
				setState(158);
				match(NEXT);
				setState(159);
				composite_linear_query_statement();
				}
				}
				setState(164);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Composite_linear_query_statementContext extends ParserRuleContext {
		public List<Simple_linear_query_statementContext> simple_linear_query_statement() {
			return getRuleContexts(Simple_linear_query_statementContext.class);
		}
		public Simple_linear_query_statementContext simple_linear_query_statement(int i) {
			return getRuleContext(Simple_linear_query_statementContext.class,i);
		}
		public List<TerminalNode> UNION() { return getTokens(GQLParser.UNION); }
		public TerminalNode UNION(int i) {
			return getToken(GQLParser.UNION, i);
		}
		public List<TerminalNode> INTERSECT() { return getTokens(GQLParser.INTERSECT); }
		public TerminalNode INTERSECT(int i) {
			return getToken(GQLParser.INTERSECT, i);
		}
		public List<TerminalNode> EXCEPT() { return getTokens(GQLParser.EXCEPT); }
		public TerminalNode EXCEPT(int i) {
			return getToken(GQLParser.EXCEPT, i);
		}
		public List<TerminalNode> ALL() { return getTokens(GQLParser.ALL); }
		public TerminalNode ALL(int i) {
			return getToken(GQLParser.ALL, i);
		}
		public List<TerminalNode> DISTINCT() { return getTokens(GQLParser.DISTINCT); }
		public TerminalNode DISTINCT(int i) {
			return getToken(GQLParser.DISTINCT, i);
		}
		public Composite_linear_query_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_composite_linear_query_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GQLListener ) ((GQLListener)listener).enterComposite_linear_query_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GQLListener ) ((GQLListener)listener).exitComposite_linear_query_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GQLVisitor ) return ((GQLVisitor<? extends T>)visitor).visitComposite_linear_query_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Composite_linear_query_statementContext composite_linear_query_statement() throws RecognitionException {
		Composite_linear_query_statementContext _localctx = new Composite_linear_query_statementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_composite_linear_query_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			simple_linear_query_statement();
			setState(173);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 7L) != 0)) {
				{
				{
				setState(166);
				_la = _input.LA(1);
				if ( !(((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 7L) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(168);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ALL || _la==DISTINCT) {
					{
					setState(167);
					_la = _input.LA(1);
					if ( !(_la==ALL || _la==DISTINCT) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				setState(170);
				simple_linear_query_statement();
				}
				}
				setState(175);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Simple_linear_query_statementContext extends ParserRuleContext {
		public List<Primitive_query_statementContext> primitive_query_statement() {
			return getRuleContexts(Primitive_query_statementContext.class);
		}
		public Primitive_query_statementContext primitive_query_statement(int i) {
			return getRuleContext(Primitive_query_statementContext.class,i);
		}
		public Return_statementContext return_statement() {
			return getRuleContext(Return_statementContext.class,0);
		}
		public Simple_linear_query_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simple_linear_query_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GQLListener ) ((GQLListener)listener).enterSimple_linear_query_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GQLListener ) ((GQLListener)listener).exitSimple_linear_query_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GQLVisitor ) return ((GQLVisitor<? extends T>)visitor).visitSimple_linear_query_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Simple_linear_query_statementContext simple_linear_query_statement() throws RecognitionException {
		Simple_linear_query_statementContext _localctx = new Simple_linear_query_statementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_simple_linear_query_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 166191104L) != 0)) {
				{
				{
				setState(176);
				primitive_query_statement();
				}
				}
				setState(181);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(183);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RETURN) {
				{
				setState(182);
				return_statement();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Primitive_query_statementContext extends ParserRuleContext {
		public Call_statementContext call_statement() {
			return getRuleContext(Call_statementContext.class,0);
		}
		public Filter_statementContext filter_statement() {
			return getRuleContext(Filter_statementContext.class,0);
		}
		public For_statementContext for_statement() {
			return getRuleContext(For_statementContext.class,0);
		}
		public Let_statementContext let_statement() {
			return getRuleContext(Let_statementContext.class,0);
		}
		public Limit_statementContext limit_statement() {
			return getRuleContext(Limit_statementContext.class,0);
		}
		public Match_statementContext match_statement() {
			return getRuleContext(Match_statementContext.class,0);
		}
		public Offset_statementContext offset_statement() {
			return getRuleContext(Offset_statementContext.class,0);
		}
		public Order_by_statementContext order_by_statement() {
			return getRuleContext(Order_by_statementContext.class,0);
		}
		public Skip_statementContext skip_statement() {
			return getRuleContext(Skip_statementContext.class,0);
		}
		public With_statementContext with_statement() {
			return getRuleContext(With_statementContext.class,0);
		}
		public Primitive_query_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primitive_query_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GQLListener ) ((GQLListener)listener).enterPrimitive_query_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GQLListener ) ((GQLListener)listener).exitPrimitive_query_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GQLVisitor ) return ((GQLVisitor<? extends T>)visitor).visitPrimitive_query_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Primitive_query_statementContext primitive_query_statement() throws RecognitionException {
		Primitive_query_statementContext _localctx = new Primitive_query_statementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_primitive_query_statement);
		try {
			setState(195);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(185);
				call_statement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(186);
				filter_statement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(187);
				for_statement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(188);
				let_statement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(189);
				limit_statement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(190);
				match_statement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(191);
				offset_statement();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(192);
				order_by_statement();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(193);
				skip_statement();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(194);
				with_statement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
